--- a/UniInfo.Web/wwwroot/css/mediaquery.css
+++ b/UniInfo.Web/wwwroot/css/mediaquery.css
@@ -10,36 +10,45 @@
     .u-name {
         font-size: 18px;
     }
+
     .min-width500 {
         min-width: 0;
     }
-    .text{
-        font-size:20px;
+
+    .text {
+        font-size: 20px;
     }
-    .img-dif{
-        font-size:18px;
+
+    .img-dif {
+        font-size: 18px;
     }
 }
 
 
 
 @media screen and (max-width: 768px) {
-    
-    .hidden-select{
-        display:block;
-        margin-top:10px;
-    }
-    #containerCity{
-        display:none;
-    }
-    .extra-info{
-        font-size:14px;
+
+    .hidden-select {
+        display: block;
+        margin-top: 10px;
     }
 
-    #eduDiv button, #langDiv button, #subjectDiv button, .item-text div, #resetBtn,.quiz-lang {
+    #containerCity {
+        display: none;
+    }
+
+    .extra-info {
+        font-size: 14px;
+    }
+
+    #eduDiv button, #langDiv button, #subjectDiv button, .item-text div, #resetBtn, .quiz-lang {
         font-size: 15px;
     }
 
+    .img-content {
+        width: 100%;
+        text-align: center !important;
+    }
 }
 
 
@@ -54,17 +63,19 @@
         display: none;
     }
 
-    #eselectCity{
-        font-size:10px;
-        display:table-cell;
-    }
-    #containerUniversity ul li{
-        font-size:12px;
+    #eselectCity {
+        font-size: 10px;
+        display: table-cell;
     }
 
-    .extra-info{
-        font-size:12px;
+    #containerUniversity ul li {
+        font-size: 12px;
     }
+
+    .extra-info {
+        font-size: 12px;
+    }
+
     table td, table th {
         padding-left: 6px;
     }
@@ -76,12 +87,24 @@
     .question p, .question-number {
         font-size: 15px;
     }
+
     .border-inner-questions {
         font-size: 12px;
-        width:30px;
-        margin:6px;
-        padding:6px;
+        width: 30px;
+        margin: 6px;
+        padding: 6px;
+    }
 
+    .quiz-conclusion table th, td {
+        font-size: 15px;
+    }
+
+    .u-info-name {
+        font-size: 20px;
+    }
+
+    #footer-element-container a {
+        font-size: 18px;
     }
 }
 
@@ -96,27 +119,31 @@
         font-size: 12px;
     }
 
-    table thead tr th:nth-child(2), th:nth-child(1) {
+    #con thead tr th:nth-child(2), th:nth-child(1) {
         display: none;
     }
 
-    table tbody tr td:nth-child(2), td:nth-child(1) {
+    #con tbody tr td:nth-child(2), td:nth-child(1) {
         display: none;
     }
+
+
 
     #con {
         padding: 0;
         margin: 0;
     }
+
     table td, table th {
-        padding-left:2px;
+        padding-left: 2px;
     }
 
     .u-name {
         font-size: 12px;
     }
-    #subj-td{
-        display:table-cell;
+
+    #subj-td {
+        display: table-cell;
     }
 
     #eduDiv button, #langDiv button, #subjectDiv button, .item-text div, #resetBtn, .quiz-lang {
@@ -125,5 +152,9 @@
 
     .question p, .question-number {
         font-size: 13px;
+    }
+
+    .u-info-name {
+        font-size: 18px;
     }
 }
