--- a/UniInfo.Web/Views/Home/Index.cshtml
+++ b/UniInfo.Web/Views/Home/Index.cshtml
@@ -8,6 +8,8 @@
 
 <div class="body-container">
     <div class="container">
+        <div class="row text-center">
+        </div>
         <div class="row">
             <div class="col-md-6 fade-animation main-element">
                 <div class="card-bg d-flex flex-column">
