--- a/UniInfo.Web/Views/Shared/_Layout.cshtml
+++ b/UniInfo.Web/Views/Shared/_Layout.cshtml
@@ -38,14 +38,14 @@
             <div id="header_area" class="bg-header">
                 <div class="container">
                     <nav class="navbar navbar-expand-lg navbar-dark bg-header">
-                        <a class="navbar-brand logo" id="site-icon-id" asp-action="Index" asp-controller="Home">UniInfo</a>
+                        <img onclick="goToMain()" class="navbar-brand logo" style="cursor:pointer" id="site-icon-id" src="/images/logo.svg" alt="asd" width="112" />
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarColor02">
                             <ul class="navbar-nav mr-auto" id="navUl">
                                 <li class="nav-item nav-line">
-                                    <a class="nav-link" asp-action="Index" asp-controller="Home">@Localizer["Main"]</a>
+                                    <a id="main" class="nav-link" asp-action="Index" asp-controller="Home">@Localizer["Main"]</a>
                                 </li>
                                 <li class="nav-item nav-line">
                                     <a class="nav-link" asp-action="Index" asp-controller="UniversityFilter">@Localizer["FilterUniversity"]</a>
@@ -92,5 +92,11 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     @RenderSection("Scripts", required: false)
+    <script type="text/javascript">
+        function goToMain()
+        {
+            document.getElementById("main").click();
+        }
+    </script>
 </body>
 </html>
